# nostr-relay-explorer

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  client.js  docker-compose.yml  package-lock.json  package.json  server.js  webpack.config.js
app/: layout.tsx  page.tsx
app/relays/: page.tsx
backend/: Dockerfile  manage.py  pyproject.toml
backend/explorer/: admin.py  urls.py  utils.py
backend/explorer/migrations/: 0001_initial.py  0002_alter_relay_id.py  0002_relay_activity_assessment.py  0003_rename_metadata_relay_full_metadata_and_more.py  0004_relay_active_tracking_relay_tracked_since.py  0005_relay_last_metadata_update_relay_last_update_success.py  0006_nip_remove_relay_supported_nips_relay_supported_nips.py
backend/explorer/models/: __init__.py  nip.py  relay.py
backend/explorer/serializers/: __init__.py  relay.py
backend/explorer/tasks/: __init__.py  update_metadata.py  update_relay_activity_assessment.py
backend/explorer/validators/: __init__.py  urls.py
backend/explorer/views/: __init__.py
backend/explorer/views/api/: relays.py
backend/meta/: apps.py  constants.py  utils.py
backend/meta/management/commands/: seed_db.py  seed_dev_data.py  seed_relays.py
backend/nostr_relay_explorer/: asgi.py  settings.py  urls.py  wsgi.py
components/: events.tsx  layout.tsx  relayMetadata.tsx  relays.tsx
config/: consts.tsx  urls.tsx
frontend/: Dockerfile  package-lock.json  package.json
pages/: _app.tsx
prisma/: schema.prisma  seed.ts
public/: index.html
types/: event.tsx  relay.tsx
utils/: relays.tsx
(+52 files in other folders)
